# cli-file-generator

./: .env  .gitignore  pyproject.toml  validated_users.csv  validated_users.xlsx
src/filegenerator/: main.py
src/filegenerator/cli/: create.py  list.py  modify.py  view.py
src/filegenerator/cli_config/: config.py
src/filegenerator/constant/: extension.py
src/filegenerator/core/: file_setting_types.py  generator.py  setting.py  types.py
src/filegenerator/file_config/: config.json  file_settings.json  target_json_config_path.json
src/filegenerator/sample_output/: pandas_table.xlsx  validated_users.xlsx
src/filegenerator/templates/: users.csv
tests/: setting.py  test_sample.py
