[project]
name = "filegenerator"
version = "0.1.0"
description = ""
authors = [
    {name = "siyunghuang",email = "siyunghuang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "logfire (>=4.3.3,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "filegenerator", from = "src"}]

[tool.poetry.scripts]
filegen = "filegenerator.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
